Fehler durch Zeichenkodierung korrigiert Formeln in Observation geTeXt
git-svn-id: file:///home/nik/repositories/svn/master@584 cf7a9c80-4257-4e8c-b9e2-f0888625b119

--- a/public/doku/metaModel/trunk/content/sections/Metamodell.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell.tex
@@ -10,6 +10,7 @@
 \newpage
 \input{\content/sections/Metamodell_Types} % Inhalt einbinden
 
+% Kapitel
 \newpage
 \input{\content/sections/Metamodell_Objects} % Inhalt einbinden
 
