--- a/public/doku/metaModel/trunk/content/Content.tex
+++ b/public/doku/metaModel/trunk/content/Content.tex
@@ -26,7 +26,7 @@
 \include{\content/sections/Einleitung} % Inhalt einbinden
 
 % Kapitel
-\include{\content/sections/Grundlagen} % Inhalt einbinden
+%\include{\content/sections/Grundlagen} % Inhalt einbinden
 
 % Kapitel
 \include{\content/sections/Metamodell} % Inhalt einbinden
