Umstrukturierung & Erweiterung Doku - Gliederung angepasst, Abstract entfernt - Kapitel "Fazit und Ausblick" in "Ausblick" umbenannt - Konstante \MM für "Metamodell" eingeführt - Wort "Metamodell" durch Konstante ersetzt - Kapitel Measurement erweitert
git-svn-id: file:///home/nik/repositories/svn/master@589 cf7a9c80-4257-4e8c-b9e2-f0888625b119

--- a/public/doku/metaModel/trunk/content/Content.tex
+++ b/public/doku/metaModel/trunk/content/Content.tex
@@ -7,9 +7,9 @@
 \include{\content/pages/Titelseite} % Inhalt einbinden
 
 % Abstract
-\newpage
-\setPageTitle{Abstract} % Seitentitel ändern, da diese Section ausgeblendet ist
-\include{\content/pages/Abstract} % Inhalt einbinden
+%\newpage
+%\setPageTitle{Abstract} % Seitentitel ändern, da diese Section ausgeblendet ist
+%\include{\content/pages/Abstract} % Inhalt einbinden
 
 % Inhaltsverzeichnis
 \newpage
@@ -32,7 +32,7 @@
 \include{\content/sections/Metamodell} % Inhalt einbinden
 
 % Kapitel
-\include{\content/sections/Fazit} % Inhalt einbinden
+\include{\content/sections/Ausblick} % Inhalt einbinden
 
 % Abbildungsverzeichnis
 \newpage
