--- a/public/doku/metaModel/trunk/content/UserConstants.tex
+++ b/public/doku/metaModel/trunk/content/UserConstants.tex
@@ -13,7 +13,7 @@
 % Konstante: Datum der Abgabe
 % Wird auf der Titelseite und in der
 % Ehrenwörtlichen Erklärung verwendet
-\newcommand{\submissionDate}{13.03.2013}
+\newcommand{\submissionDate}{13. M\"arz 2013}
 
 % Konstante: Ort der Abgabe
 % Wird in der Ehrenwörtlichen Erklärung verwendet
