--- a/public/doku/metaModel/trunk/content/pages/Titelseite.tex
+++ b/public/doku/metaModel/trunk/content/pages/Titelseite.tex
@@ -8,7 +8,7 @@
 
 \titlepageBoxHeadline{Fachhochschule für die Wirtschaft Hannover}{-- FHDW --}
 
-\titlepageBoxHeadline{Dokumentation des Projekts}{\textbf{Metamodell}}
+\titlepageBoxHeadline{Dokumentation des Projekts}{\textbf{\MM}}
 
 \titlepageBoxHeadline{Verfasser:}{
 	Alexander Bellhäuser,
