--- a/public/doku/metaModel/trunk/content/sections/Einleitung.tex
+++ b/public/doku/metaModel/trunk/content/sections/Einleitung.tex
@@ -1,27 +1,8 @@
 \section{Einleitung}
 
+Im Rahmen des Master Studiums (M.Sc. Studiengang: Business Process Engineering) an der FHDW Hannover
+war es für die Studiengruppe \qq{HFP412} Aufgabe ein \MM zu realisieren. Als Grundlage für das \MM diente zum einen das Werk 
+\qq{Analysis Patterns} \refLibLiteratur{fowler1997analysis} von Martin Fowler, welcher bereits in den 1990er Jahren wichtige Denkanstöße zur Metamodellierung gab. 
+Sowie zum anderen die Vorlesung und die damit verbundenen Unterlagen \refLibLiteratur{LoeweInfInfra} zum Thema \qq{Informationsinfrastrukturen} von Herrn Prof. Dr. Michael Löwe. 
 
-\subsection{Das Team / das Projekt / die Motivation}
-
-\TODO[Kurze Beschreibung des Teams und der Aufgabenstellung]
-
-\TODO[Erklärung: Fachbegriffe ausschließlich in englischer Bezeichnung aus dem Fowler]
-
-\subsection{Aufbau der Arbeit}
-
-\TODO[Struktur der Arbeit beschreiben (roter Faden)]
-
-
- 
-
-% \tbl{Anwendungsfälle}{anwendungsfaelle}{|l||p{\relWidth{0.50}}|}{
-% 	\thl{Name}					&	\thl{<Hier könnte Ihr Text stehen>}	\tr
-% 	Auslöser					&	<Hier könnte Ihr Text stehen>	\tr
-% 	Beteiligte Akteure			&	<Hier könnte Ihr Text stehen>	\tr
-% 	Vorbedingungen				&	\blindtext						\tr
-% 	Eingehende Informationen	&	<Hier könnte Ihr Text stehen>	\tr
-% 	Ergebnis					&	<Hier könnte Ihr Text stehen>	\tr
-% 	Nachbedingungen				&	<Hier könnte Ihr Text stehen>	\tr
-% 	Ablaufbeschreibung			&	<Hier könnte Ihr Text stehen>	\tr
-% 	Ausnahmesituation			&	<Hier könnte Ihr Text stehen>	\tr
-% }{\defaultTblBg}
+Die vorliegende Ausarbeitung dokumentiert das Projekt \qq{\MM} und die damit verbundene Softwarelösung.
