--- a/public/doku/metaModel/trunk/content/sections/Metamodell_ModelItem.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_ModelItem.tex
@@ -11,6 +11,7 @@ ersetzen.
 
 
 \subsubsection{Operationen}
+
 \begin{description}
 \item[fetchDependentItems()] 
 liefert alle Modellelemente zurück, die vom Element auf dem sie aufgerufen wird, direkt abhängig sind.
@@ -26,8 +27,9 @@ abschließend durch den Aufruf von \emph{getThis().delete\$ME} gelöscht.
 \item[prepareForDeletion()] ist als Analogon zu \term{initializeOnCreation()} entworfen worden und ermöglicht ein 
 \qq{Aufräumen} vor dem tatsächlichen Löschen. Ein Singleton-Type erstellt z.B. im \term{initializeOnCreation()} sein zugehöriges 
 Singleton-Objekt und löscht dies in \emph{prepareForDeletion()}. 
-
 \end{description}
+
+
 \subsubsection{Weitere Ideen}
 
-\TODO[Kapitel schreiben]
+\TODO[Bitte in Kapitel Ausblick verschieben]
