--- a/public/doku/metaModel/trunk/content/UserCommands.tex
+++ b/public/doku/metaModel/trunk/content/UserCommands.tex
@@ -2,5 +2,5 @@
 %          BENUTZERDEFINIERTE BEFEHLE          %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% Neuer Befehl: Beispiel
-%\newcommand{\example}{\TODO[Gib was aus, was mir gefällt!]}
+\newcommand{\MM}{Metamodell\xspace}
+\newcommand{\MMs}{Metamodells\xspace}
