--- a/public/doku/metaModel/trunk/content/sections/appendix/Anhang.tex
+++ b/public/doku/metaModel/trunk/content/sections/appendix/Anhang.tex
@@ -1,5 +1,5 @@
 % Kapitel einbinden
-\include{\content/sections/appendix/Beispielanhang}
+%\include{\content/sections/appendix/Beispielanhang}
 
 % Kapitel einbinden
-\include{\content/sections/appendix/Weiterer_Anhang}
+%\include{\content/sections/appendix/Weiterer_Anhang}
