Ideen für Ausblick... Messages als extra File rausgezogen (da subsection) korrekturen
git-svn-id: file:///home/nik/repositories/svn/master@592 cf7a9c80-4257-4e8c-b9e2-f0888625b119

--- a/public/doku/metaModel/trunk/content/sections/Ausblick.tex
+++ b/public/doku/metaModel/trunk/content/sections/Ausblick.tex
@@ -1,3 +1,7 @@
 \section{Ausblick}
 
-\TODO[Kapitel schreiben]
+\TODO[Ideen Formulieren]
+- Path
+- Posting Rules
+- Versionierung
+- Zentrale Ablage der Constraints
