--- a/public/doku/metaModel/trunk/content/sections/Metamodell.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell.tex
@@ -21,6 +21,10 @@
 
 % Kapitel
 \newpage
+\input{\content/sections/Metamodell_Messages} % Inhalt einbinden
+
+% Kapitel
+\newpage
 \input{\content/sections/Metamodell_Quantity} % Inhalt einbinden
 
 % Kapitel
